Fix cumulative layout shift on new design

--- a/src/components/ItemCard/item-card.css
+++ b/src/components/ItemCard/item-card.css
@@ -6,17 +6,20 @@
   background-color: white;
   border-radius: 10px;
   box-shadow: 5px 5px 5px #d3d3d3;
+  width: 200px;
+  height: 224px;
 }
 
 .item-card-image {
   padding: 0.5em;
+  height: 144px;
+  width: 144px;
 }
 
 .item-card-caption1 {
   display: flex;
   justify-content: center;
   padding: 0.5em 0.5em;
-  width: 100%;
   font-weight: 600;
 }
 
@@ -26,10 +29,6 @@
   justify-content: center;
   white-space: nowrap;
   padding: 0.5em 0.5em;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  width: 100%;
-  height: 100%;
 }
 
 .money-bag-icon {
